Using --add-exports instead of -addExports